# mcp-perf-suite

./: .dockerignore  .env.example  .gitignore  CHANELOG.md  CHANGELOG.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  config.example.yaml  config.yaml  requirements.txt
agent-framework/: .env.example  AGENTS.md  README.md  __init__.py  a2a_server.py  agui_server.py  pyproject.toml  requirements.txt
agent-framework/agents/analysis-agent/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/agents/execution-agent/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/agents/monitoring-agent/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/agents/notifications-agent/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/agents/orchestrator/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/agents/reporting-agent/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/agents/script-agent/: INSTRUCTIONS.md  agent.py  agent_card.json  config.example.yaml
agent-framework/config/: agents.example.yaml
agent-framework/sql/: 001_create_perfagent_state.sql  002_create_agent_sessions.sql  003_create_agent_tasks.sql  004_create_agent_checkpoints.sql  005_create_conversation_messages.sql  006_create_tool_call_traces.sql  007_create_hitl_approvals.sql  008_create_agent_threads.sql  README.md  provision.py
agent-framework/utils/: agents_config.py  auth.py  base_agent.py  conversation_store.py  copilotkit_stub.py  db.py  hitl_store.py  llm_provider.py  mcp_client.py  session_middleware.py  session_store.py  task_executor.py  task_store.py  thread_store.py  user_identity.py
blazemeter-mcp/: README.md  blazemeter.py  config.example.yaml  pyproject.toml  requirements.txt  workflow.yaml
blazemeter-mcp/.cursor/rules/: AGENTS.md
blazemeter-mcp/services/: artifact_manager.py  blazemeter_api.py
blazemeter-mcp/utils/: config.py  file_utils.py  workflow_utils.py
blazemeter-mcp/workflows/: blazemeter_workflow.py
confluence-mcp/: .env.example  README.md  config.example.yaml  confluence.py  pyproject.toml  requirements.txt
confluence-mcp/.cursor/rules/: AGENTS.md
confluence-mcp/services/: artifact_manager.py  confluence_api_v1.py  confluence_api_v2.py  confluence_v1_api.py  confluence_v2_api.py  content_parser.py
confluence-mcp/utils/: pagination.py
datadog-mcp/: README.md  config.example.yaml  custom_queries.example.json  datadog.py  environments.example.json  pyproject.toml  requirements.txt
datadog-mcp/.cursor/rules/: AGENTS.md
datadog-mcp/services/: datadog_api.py  datadog_apm.py  datadog_logs.py  datadog_timeseries.py
datadog-mcp/utils/: config.py  datadog_config_loader.py  file_utils.py
docker/: README.md  (+13 more)
jmeter-mcp/: README.md  config.example.yaml  correlation_config.example.yaml  jmeter.py  jmeter_config.example.yaml  jmeter_config.yaml  pyproject.toml  requirements.txt
jmeter-mcp/services/: correlation_analyzer.py  har_adapter.py  har_converter.py  har_jmx_diffengine.py  jmeter_log_analyzer.py  jmeter_runner.py  jmx_editor.py  network_capture.py  playwright_adapter.py  report_aggregator.py  script_generator.py  spec_parser.py  swagger_adapter.py
jmeter-mcp/services/correlations/: __init__.py  analyzer.py  classifiers.py  constants.py  extractors.py  matchers.py  naming.py  utils.py
jmeter-mcp/services/helpers/: analysis_export_helpers.py  diffengine_report_helpers.py  extractor_helpers.py  hostname_helpers.py  orphan_helpers.py  substitution_helpers.py
jmeter-mcp/services/jmx/: __init__.py  assertions.py  component_registry.py  config_elements.py  controllers.py  listeners.py  oauth2.py  plan.py  post_processor.py  pre_processor.py  samplers.py  timers.py
jmeter-mcp/test-specs/azure-devops/: README.md
jmeter-mcp/test-specs/web-flows/: blazedemo_product_purchase.md
jmeter-mcp/utils/: browser_utils.py  config.py  file_utils.py  log_utils.py
msteams-mcp/: README.md  config.example.yaml  msteams.py  pyproject.toml  requirements.txt
msteams-mcp/services/: auth_manager.py  browser_auth.py  browser_context.py  crypto.py  errors.py  parsers.py  session_store.py  substrate_api.py  target_resolver.py  teams_api.py  template_manager.py  token_extractor.py
msteams-mcp/templates/: default-notification-sharepoint-upload.md  default-notification-start-test.md  default-notification-stop-test.md  default-notification-test-results.md
msteams-mcp/utils/: config.py
perfanalysis-mcp/: README.md  config.example.yaml  perfanalysis.py  pyproject.toml  requirements.txt  slas.example.yaml
perfanalysis-mcp/.cursor/rules/: AGENTS.md
perfanalysis-mcp/services/: ai_analyst.py  apm_analyzer.py  bottleneck_analyzer.py  kpi_analyzer.py  log_analyzer.py  performance_analyzer.py
perfanalysis-mcp/utils/: config.py  file_processor.py  kpi_utils.py  openai_client.py  sla_config.py  statistical_analyzer.py
perfmemory-mcp/: .env.example  README.md  config.example.yaml  perfmemory.py  pyproject.toml  requirements.txt  taxonomy.example.yaml
perfmemory-mcp/services/: embeddings.py  graph_manager.py  session_manager.py  taxonomy.py
perfmemory-mcp/tools/: README.md  normalize_taxonomy.py  sync_graph.py  update_attempt_metadata.py  update_session_metadata.py
perfmemory-mcp/utils/: config.py
perfreport-mcp/: README.md  chart_colors.example.yaml  chart_colors.yaml  chart_schema.example.yaml  chart_schema.yaml  config.example.yaml  perfreport.py  pyproject.toml  report_config.example.yaml  report_config.yaml  requirements.txt
perfreport-mcp/services/: chart_generator.py  comparison_chart_generator.py  comparison_report_generator.py  kpi_report_generator.py  report_generator.py  report_revision_generator.py  revision_context_manager.py  revision_data_discovery.py  template_manager.py
perfreport-mcp/templates/: default_comparison_report_template.md  default_report_template.md
perfreport-mcp/utils/: chart_utils.py  config.py  data_loader_utils.py  file_utils.py  report_utils.py  revision_utils.py
(+158 files in other folders)
