[project]
name = "blazemeter-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.11.2",
  "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 👇 Tell hatch which files belong in the wheel
[tool.hatch.build.targets.wheel]
packages = ["services"]          # include the services/ package
include = ["blazemeter.py"]      # also include the top-level script

# (optional, but tidy)
[tool.hatch.build.targets.sdist]
include = ["services", "blazemeter.py", "pyproject.toml", "README.md"]
