[project]
name = "datadog-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.11.2",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 👇 Tell hatch which files belong in the wheel
[tool.hatch.build.targets.wheel]
packages = ["services"]          # include the services/ package
include = ["datadog.py"]         # also include the top-level script

# (optional, but tidy)
[tool.hatch.build.targets.sdist]
include = [
  "services", 
  "utils",
  "datadog.py", 
  "pyproject.toml", 
  "README.md",
  "config.yaml",
  "config.mac.yaml",
  "config.windows.yaml",
  "environments.json"
]
