[project]
name = "msteams-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.11.2",
  "httpx>=0.28.1",
  "playwright>=1.40.0",
  "cryptography>=42.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "utils"]
include = ["msteams.py"]

[tool.hatch.build.targets.sdist]
include = [
  "services",
  "utils",
  "msteams.py",
  "pyproject.toml",
  "README.md",
  "config.yaml",
  "config.example.yaml",
]
