[project]
name = "perfanalysis-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.11.2",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pyyaml>=6.0",
  "aiofiles>=23.0.0",
  "openai>=1.65.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 👇 Tell hatch which files belong in the wheel
[tool.hatch.build.targets.wheel]
packages = ["services", "utils"]          # include the services/ package
include = ["perfanalysis.py"]         # also include the top-level script

# (optional, but tidy)
[tool.hatch.build.targets.sdist]
include = [
  "services", 
  "utils",
  "perfanalysis.py", 
  "pyproject.toml", 
  "README.md",
  "config.yaml",
  "config.mac.yaml",
  "config.windows.yaml"
]
