[project]
name = "perfreport-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "pypandoc>=1.13",
    "pyandoc>=0.2.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.2",
    "pytz>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "utils"]
include = ["perfreport.py"]

[tool.hatch.build.targets.sdist]
include = [
    "services",
    "utils",
    "templates",
    "perfreport.py",
    "pyproject.toml",
    "README.md",
    "config.yaml",
    "config.windows.yaml",
    "config.mac.yaml",
    "chart_colors.yaml",
    "chart_schema.yaml"
]
